--- a/style.css
+++ b/style.css
@@ -1,53 +1,144 @@
 .container{
-    height:100vh;
+    height:1200;
     width:100%;
-    border:3px solid red;
-}
-.navbar{
-    height:80px;
-    width:100%;
-    border:2px solid black;
     display:flex;
-    justify-content:right;
-    position:relative;
-    padding:8px;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    /* background-color:rgb(192, 215, 240); */
 
 }
-.logo{
-    height:80px;
-    width:300px;
-    position:absolute;
-    left:0px;
+.navbar{
+    height:60px;
+    width:100%;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    background-color:#21828f;
+}
+.web-name{
+    height:60px;
+    width:20%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+.name{
+    height:40px;
+    width:260px;
+    display:flex;
+    justify-content:left;
+    align-items:center;
+    padding-left:20px;
+}
+.name h2{
+    height:30px;
+    width:130px;
+    color:white;
+}
+.nav-list{
+    height:60px;
+    width:70%;
+    display:flex;
+    justify-content:right;
+    align-items:center;
+}
+.list-box{
+    height:30px;
+    width:100px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-weight:600;
+}
+.list-box p{
+    color:white;
+}
+.nav-icon{
+    height:40px;
+    width:180px;
     display:flex;
     justify-content:space-around;
     align-items:center;
-
+    /* border:1px solid red; */
 }
-.navlist{
-    height:80px;
-    width:60%;
-    border:2px solid red;
-    display: flex;    
-    justify-content: center;
-    align-items: center;
-}
-.navlist ul{
-    display: flex;
-    gap: 60px;
-    justify-content: center;
-    list-style: none;
-}
-.navlist ul li a{
-    text-decoration: none;
-    font-weight: bolder;
-    color: red;
-}
-.logo-img{
-    height:80px;
+.get-app{
+    height:20px;
     width:80px;
-    border-radius:50%;
-    border:1px solid gold;
-    background-image:url(/logo.avif);
-    background-size:cover;
-    
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    border-radius:6px;
+    border:2px solid white;
+}
+.get-app p{
+    font-size:13px;
+    color:white;
+}
+.user-icon{
+    height:21px;
+    width:21px;
+}
+.user-icon i{
+    color:white;
+    font-size:20px;
+}
+.card-icon{
+    height:20px;
+    width:35px;
+}
+.card-icon i{
+    color:white;
+    font-size:20px;
+}
+.home-card{
+    height:38px;
+    width:100%;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    background-color:#135D66;
+}
+.home-list{
+    height:30px;
+    width:30%;
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    color:white;
+}
+.login{
+    height:40px;
+    width:200px;
+    /* border:1px solid red; */
+}
+.accounts{
+    height:40px;
+    width:150px;
+    display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+    color:white;
+    padding-right:5px;
+}
+.top-card{
+    height:400px;
+    width:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    border:1px solid red;
+}
+.top-text{
+    height:220px;
+    width:500px;
+    margin:20px;
+    border-radius:0px 8px 8px 0px;
+    border:1px solid red;
+}
+.top-img{
+    height:220px;
+    width:330px;
+    border-radius:8px 0px 0px 8px;
+    border:1px solid red;
 }
