--- a/style.css
+++ b/style.css
@@ -1,13 +1,4 @@
-.container{
-    height:1200;
-    width:100%;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    flex-direction:column;
-    /* background-color:rgb(192, 215, 240); */
 
-}
 .navbar{
     height:60px;
     width:100%;
@@ -29,7 +20,7 @@
     display:flex;
     justify-content:left;
     align-items:center;
-    padding-left:20px;
+    padding-left:2;
 }
 .name h2{
     height:30px;
@@ -63,7 +54,7 @@
     /* border:1px solid red; */
 }
 .get-app{
-    height:20px;
+    height:2;
     width:80px;
     display:flex;
     justify-content:center;
@@ -81,15 +72,15 @@
 }
 .user-icon i{
     color:white;
-    font-size:20px;
+    font-size:2;
 }
 .card-icon{
-    height:20px;
+    height:2;
     width:35px;
 }
 .card-icon i{
     color:white;
-    font-size:20px;
+    font-size:2;
 }
 .home-card{
     height:38px;
@@ -110,7 +101,7 @@
 .login{
     height:40px;
     width:200px;
-    /* border:1px solid red; */
+    border:1px solid red;
 }
 .accounts{
     height:40px;
@@ -121,24 +112,90 @@
     color:white;
     padding-right:5px;
 }
-.top-card{
-    height:400px;
+.container{
+    height:2290px;
+    width:100%;
+    display:flex;
+    /* justify-content:center; */
+    align-items:center;
+    flex-direction:column;
+    border:1px solid green;
+    background-color:rgb(228, 226, 226);
+}
+.title{
+    height:200px;
+    width:90%;
+    display:flex;
+    justify-content:left;
+    align-items:left;
+    flex-direction:column;
+    font-size:28px;
+}
+.title p{
+    height:40px;
+    width:90%;
+    font-size:20px;
+}
+.img-box{
+    height:300px;
+    width:90%;
+    box-shadow:0px 0px 4px 0px;
+    border-radius:10px;
+    margin:10px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    /* border:1px solid green; */
+}
+.img-card{
+    height:290px;
+    width:362px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-right:10px;
+    /* border:2px solid rgb(16, 12, 235); */
+}
+.img-card img{
+    height:299px;
+    width:343px;
+    border-radius:10px;
+}
+.text-card{
+    height:259px;
+    width:70%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-left:10px;
+    flex-direction:column;
+    padding:20px;
+    /* border:1px solid red; */
+}
+.text-card h2{
+    font-size:30px;
+}
+.text-card p{
+    font-family: Arial sans-serif;
+}
+.footer{
+    height:300px;
     width:100%;
     display:flex;
     justify-content:center;
     align-items:center;
     border:1px solid red;
+    background-color:black;
 }
-.top-text{
-    height:220px;
-    width:500px;
-    margin:20px;
-    border-radius:0px 8px 8px 0px;
-    border:1px solid red;
+.icons{
+    height:40px;
+    width:250px;
+    display: flex;
+    justify-content:space-evenly;
+    align-items:center;
+    /* border:2px solid red; */
 }
-.top-img{
-    height:220px;
-    width:330px;
-    border-radius:8px 0px 0px 8px;
-    border:1px solid red;
+.icons{
+    font-size:25px;
+    color:white;
 }
